--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-hello world
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Programming is fun</title>
+        <meta charset="UTF-8">
+        <link href="css/style.css" rel="stylesheet">
+        <!-- Compiled and minified CSS -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
+        <!-- Compiled and minified JavaScript -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
+    </head>
+    <body>
+    <div class="container">
+        <div class="row">
+            <div class="col s12">
+                <h1>Dinesh's Portfolio</h1>
+            </div>
+        </div>
+    </div>
+    </body>
+</html>
