--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="row">
             <div class="col s12">
                 <h1>Dinesh's Portfolio</h1>
+                <img src="/images/avatar.png" alt="avatar">
             </div>
         </div>
     </div>
