playing with content

--- a/index.html
+++ b/index.html
@@ -13,8 +13,28 @@
     <div class="container">
         <div class="row">
             <div class="col s12">
-                <h1>Dinesh's Portfolio</h1>
-                <img src="/images/avatar.png" alt="avatar">
+                <h1>Portfolio</h1>
+                <div class="col s6">
+                    <img src="images/avatar.png" alt="avatar">
+                </div>
+                <div class="col s6">
+                    <table class="stripped centered">
+                        <tr>
+                            <td>Name</td>
+                            <td>Dinesh</td>
+                        </tr>
+                        <tr>
+                            <td>Skills</td>
+                            <td>.net c#, jquery, javascript, angular 2, nodejs</td>
+                        </tr>
+                        <tr>
+                            <td>Name</td>
+                            <td>Dinesh</td>
+                        </tr>
+                        
+                    </table>
+                </div>
+                
             </div>
         </div>
     </div>
